# voice_to_text_local

./: .gitignore  CLAUDE.md  README.md  client_simple.py  client_simple_toggle.py  client_streaming.py  descripcion_del_programa.md  full claude code conversation project 7.md  hello.py  propt_claud.md  pyproject.toml  server.py  setup_server_fixed.sh  start_voice_system.sh  status_voice_system.sh  stop_voice_system.sh  transcriptions.db  trigger.py  trigger.py.man
discarded/: setup_server_safe.sh
versiones/00voice_to_text_local/: client.py  server.py  server_copy.py
