[project]
name = "voice-to-text-local"
version = "0.1.0"
description = "Voice-to-text system with Mac client and Ubuntu GPU server"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "openai-whisper>=20231117",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "python-multipart>=0.0.6",
    "pyaudio>=0.2.11",
    "requests>=2.31.0",
    "websockets>=12.0",
    "apsw>=3.45.0"
]
